# sw_battle_test

./: CMakeLists.txt  Dockerfile
src/: main.cpp
src/Simulation/Commands/: CreateMapCommand.hpp  MarchCommand.hpp
src/Simulation/Core/: Attack.hpp  CommandFileProcessor.hpp  EventsObserver.cpp  EventsObserver.hpp  Map.cpp  Map.hpp  Point.hpp  Simulation.cpp  Simulation.hpp  SimulationContext.hpp  TraitList.hpp  TurnStatus.hpp  Unit.hpp
src/Simulation/Mechanics/: Move.cpp  Move.hpp  Search.cpp  Search.hpp
src/Simulation/Traits/: Agility.hpp  AttackRange.hpp  HP.hpp  MoveRange.hpp  OccupyTile.hpp  Strength.hpp  TrivialTrait.hpp
src/Simulation/Units/Hunter/: Hunter.hpp  SpawnHunterCommand.hpp
src/Simulation/Units/Swordman/: SpawnSwordsmanCommand.hpp  Swordsman.hpp
